<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Shubh Calendar</string>
    <string name="shubh_calendar">Shubh Calendar</string>
    <string name="register_with_your_phone_number">Register With Your Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="get_otp">GET OTP</string>
    <string name="an_sms_with_a_code_was_sent_to_you_please_type_it_below">An sms with a code was sent to you,Please type it below</string>
    <string name="didn_t_get_an_sms_click_here_to_resend">Didn\'t get an sms?,Click here to resend</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="wrong_mobile_number_click_here">Wrong Mobile Number? Click here</string>
    <string name="login_with_mobile">Or Login with mobile</string>
    <string name="next">Next</string>
    <string name="home">Home</string>

    <string name="panchang_muharat">Panchang/Muharat</string>
    <string name="pooja_artis_mantras_kathas">Pooja-Artis,Mantras,Kathas</string>
    <string name="horoscope">Horoscope</string>
    <string name="holiday">Holiday</string>
    <string name="festivals">Festivals</string>
    <string name="logout">Logout</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="holidays">Holidays</string>
    <string name="pooja">Pooja</string>
    <string name="panchang">Panchang</string>
    <string name="muhurat">Muhurat</string>
    <string name="menu">Menu</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="calendar">Calendar</string>
    <string name="matrasandartis">Mantras/Aartis</string>
    <string name="vidhikatha">Vidhi Samagri</string>
    <string name="kathas">Kathas</string>

    <string name="error_generic">Playback failed</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="title_activity_ads">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_main_activityaad">MainActivity</string>

    <string name="admob_app_id">
ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">
ca-app-pub-3940256099942544/6300978111</string>
    <string name="share">share</string>
    <string name="holidayandfestival">Holidays And Festivals</string>
</resources>