<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationCalendar"
        android:icon="@drawable/ic_cal2"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigationHolidays"
        android:icon="@drawable/ic_holiday"
        android:title="@string/holidays" />

    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/home"
        android:title="@string/home" />

  <item
        android:id="@+id/navigationPanchang"
        android:icon="@drawable/ic_new_swastik"
        android:title="@string/panchang" />

      <item
        android:id="@+id/navigationHoroscope"
        android:icon="@drawable/ic_horoscope"
        android:title="@string/horoscope" />



</menu>
