<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.HomeActivity"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:visibility="gone"
            android:src="@drawable/ic_menu"
            app:tint="@color/black" />


        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llbottmnav" />
        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_above="@+id/llbottmnav" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/llbottmnav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="12dp">


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/navigation"/>


        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/bk">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/menu"
                    android:id="@+id/txMenu"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/blue"
                    android:textSize="15dp" />


                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:id="@+id/ivCross"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/wrong"
                    />



                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardViewProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/ivCross"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="8dp">



                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:id="@+id/imageViewUserProfile"
                            android:scaleType="fitXY"
                            android:src="@drawable/icdummy_user" />



                </com.google.android.material.card.MaterialCardView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:id="@+id/textViewUserName"
                    android:layout_below="@+id/txMenu"
                    android:layout_toRightOf="@+id/cardViewProfile"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:id="@+id/textViewUserEmail"
                    android:layout_below="@+id/textViewUserName"
                    android:layout_toRightOf="@+id/cardViewProfile"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rl"
                android:background="@color/purple_200"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/rlHome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/home"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlCalendar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_cal2"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/calendar"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlPanchang"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_new_swastik"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/panchang_muharat"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlPooja"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_namaskar"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/pooja_artis_mantras_kathas"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlHoroscope"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_horoscope"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/horoscope"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlHoliday"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_holiday"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/holiday"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:id="@+id/txt"
                        android:text="@string/language"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlNotification"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_baseline_notifications_24"
                        app:tint="@color/white" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="60dp"
                        android:text="@string/notification"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayoutLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/logout"
                        app:tint="@color/white" />


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:paddingLeft="45dp"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>